--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,8 +16,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".CadastroActivity"
-            android:exported="true"></activity>
+        <activity
+            android:name=".CadastroActivity"
+            android:exported="true" />
+        <activity android:name=".AlunoActivity"></activity>
     </application>
 
 </manifest>
